Support for automatic connect to open controller (https://github.com/cncjs/cncjs-pendant-tinyweb/issues/6)

--- a/src/index.html
+++ b/src/index.html
@@ -379,7 +379,7 @@ $('document').ready(function() {
             if (root.cnc.connected) {
                 window.location = '#/workspace';
             } else {
-                window.location = '#/connection';
+                window.location = cnc.reConnect() ? '#/axes' : '#/connection';
             }
         },
         '/workspace': function() {
